// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appsForUserTypeAndGroups returns apps for a group 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.png",
        "newWindow": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
      Object {
        "description": "",
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "/assets/apps/identityiq.jpg",
        "newWindow": false,
        "title": "IIQ",
        "url": "https://identity.boston.gov/identityiq/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Create Sponsored Account",
        "url": "https://identity.boston.gov/identityiq/createSponsor.jsf",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Unblock Website Request",
        "url": "https://boston.seamlessdocs.com/f/geol18cumhw",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": true,
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-dev/Selection?cmd=devices",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Request Access",
        "url": "https://identity.boston.gov/identityiq/accessRequest/accessRequest.",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns just the "everyone" category for no groups 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": "/assets/apps/boston-maps.png",
        "newWindow": false,
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "The Hub",
        "url": "https://edit-dev-hub.boston.gov/user",
      },
    ],
    "icons": true,
    "showRequestAccessLink": true,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Create Sponsored Account",
        "url": "https://identity.boston.gov/identityiq/createSponsor.jsf",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "FleetHub",
        "url": "http://boston.getlocalmotion.com/",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Unblock Website Request",
        "url": "https://boston.seamlessdocs.com/f/geol18cumhw",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": true,
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-dev/Selection?cmd=devices",
      },
      Object {
        "description": "",
        "groups": null,
        "iconUrl": null,
        "newWindow": false,
        "title": "Request Access",
        "url": "https://identity.boston.gov/identityiq/accessRequest/accessRequest.",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Tools",
  },
]
`;
